Fix hidden search submit button text on small viewport (#311)
* Fix hidden search submit button text on small viewport

**Why**: Because the submit button should have a visible text label.

* Prepare 6.4.1 release

--- a/src/scss/components/_search.scss
+++ b/src/scss/components/_search.scss
@@ -6,8 +6,8 @@
   width: auto;
 }
 
-.usa-search .usa-search__submit-text {
-  position: static;
+.usa-search__submit-text {
+  display: block;
 }
 
 .usa-search--big [type='submit'],
